syntax = "proto3";

option java_multiple_files = true;
package pl.pb.grpcexample.clientinterceptorin;


message DeadlineRequest{
  int32 processingSeconds = 1;
}

message DeadlineResponse{
  string message = 1;
}


service ClientInterceptorService{

  rpc run(DeadlineRequest) returns (stream DeadlineResponse);
}